# swagger.json
@@ -104,7 +104,7 @@
 					}
 				},
 				"tags": [
-					"Signup"
+					"USER API's"
 				],
 				"security": [],
 				"parameters": [],
@@ -182,7 +182,7 @@
 					}
 				},
 				"tags": [
-					"Login"
+					"USER API's"
 				],
 				"security": [],
 				"parameters": [],
@@ -242,7 +242,7 @@
 					}
 				},
 				"tags": [
-					"Verify user"
+					"USER API's"
 				],
 				"security": [],
 				"parameters": [],
@@ -295,7 +295,7 @@
 					}
 				},
 				"tags": [
-					"Test Auth"
+					"USER API's"
 				],
 				"security": [
 					{
@@ -337,7 +337,7 @@
 					}
 				},
 				"tags": [
-					"Forgot Password & Match Otp"
+					"USER API's"
 				],
 				"security": [
 					{
@@ -410,7 +410,7 @@
 					}
 				},
 				"tags": [
-					"Delete User"
+					"USER API's"
 				],
 				"security": [
 					{
@@ -461,7 +461,7 @@
 					}
 				},
 				"tags": [
-					"Update User"
+					"USER API's"
 				],
 				"security": [
 					{
@@ -510,7 +510,7 @@
 					}
 				},
 				"tags": [
-					"All_Classes"
+					"USER API's"
 				],
 				"security": [
 					{
